--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- color scheme -->
     <link id="colors" href="css/colors/scheme-03.css" rel="stylesheet" type="text/css" >
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+
+    <!-- Enable browser caching using Cloudflare (Free CDN) -->
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable">
+    <style>
+    /* Inline critical CSS */
+    body { font-family: sans-serif; margin: 0; }
+    .container { max-width: 1200px; margin: 0 auto; }
+    /* Add more critical styles here */
+    </style>
+    
+    <!-- Load non-critical CSS async -->
+    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="styles.css"></noscript>
 
 </head>
 
