updated room type spec

--- a/timber-haven.html
+++ b/timber-haven.html
@@ -518,7 +518,7 @@
                             const extraBeds = formData.get('extra_beds');
                             const services = formData.getAll('service');
                         
-                            let message = `*New Booking Request*%0A%0A`;
+                            let message = `*Timber Haven New Booking Request*%0A%0A`;
                             message += `*Name:* ${name}%0A`;
                             message += `*Email:* ${email}%0A`;
                             message += `*Contact:* ${contact}%0A`;
