--- a/alpine-retreat.html
+++ b/alpine-retreat.html
@@ -513,7 +513,7 @@
                             const extraBeds = formData.get('extra_beds');
                             const services = formData.getAll('service');
                         
-                            let message = `*New Booking Request*%0A%0A`;
+                            let message = `*Alpine Retreat New Booking Request*%0A%0A`;
                             message += `*Name:* ${name}%0A`;
                             message += `*Email:* ${email}%0A`;
                             message += `*Contact:* ${contact}%0A`;
