updated room type spec

--- a/alpine-retreat.html
+++ b/alpine-retreat.html
@@ -315,7 +315,7 @@
                                 </div>
                             </div>
 
-                            <p>Ea sunt tempor dolor id do nisi est sint culpa in eiusmod sed aliqua elit nisi nulla mollit proident minim commodo aute elit ut mollit velit exercitation cillum quis sed dolore quis laboris nostrud exercitation magna anim aliquip exercitation est reprehenderit labore officia dolore eu non in do exercitation deserunt tempor aliqua enim esse ex deserunt magna in esse nostrud deserunt.</p>
+                            <p>The intimate wooden cottage at Tigerwoods Resort is a tranquil escape for 2-3 guests, combining rustic elegance with cozy comforts. Surrounded by the natural beauty of Pilibhit Tiger Reserve, the cottage features warm wood-paneled interiors, comfortable furnishings, and a private veranda perfect for soaking in the serene forest ambiance. A peaceful retreat where nature and luxury meet.</p>
 
                             <div class="spacer-single"></div>
 
