--- a/timber-haven.html
+++ b/timber-haven.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-    <title>Tiger Woods Pilibhit - Alpine Retreat</title>
+    <title>Tiger Woods Pilibhit - Timber Haven</title>
     <link rel="icon" href="images/apple-touch-icon.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
@@ -296,12 +296,12 @@
                 <div class="container">
                     <div class="row g-4 gx-5">
                         <div class="col-lg-7">
-                            <h2>Alpine Retreat</h2>
+                            <h2>Timber Haven Retreat</h2>
 
                             <div class="d-flex">
                                 <div class="relative me-4">
                                     <img src="images/icons/guests.png" class="w-20px abs mt-1" alt="">
-                                    <p class="ml30 text-dark fw-500">2-4 Guests</p>
+                                    <p class="ml30 text-dark fw-500">3-4 Guests</p>
                                 </div>
 
                                 <div class="relative me-4">
