updated room type spec

--- a/alpine-retreat.html
+++ b/alpine-retreat.html
@@ -278,11 +278,14 @@
                     <a class="btn-prev"></a>                                
 
                     <div id="gallery-carousel" class="owl-3-cols-autowidth owl-carousel owl-theme">
-                        <img src="images/room-single/room5.jpg" class="h-600px" alt="">
-                        <img src="images/room-single/room4.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/alpine-retreat.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/alpine1.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/alpine2.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/alpine5.jpg" class="h-600px" alt="">
                         <img src="images/room-single/room7.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/alpine4.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/alpine3.jpg" class="h-600px" alt="">
                         <img src="images/room-single/room6.jpg" class="h-600px" alt="">
-                        <img src="images/room-single/5.webp" class="h-600px" alt="">
                     </div>
                 </div>
             </section>
@@ -296,12 +299,12 @@
                             <div class="d-flex">
                                 <div class="relative me-4">
                                     <img src="images/icons/guests.png" class="w-20px abs mt-1" alt="">
-                                    <p class="ml30 text-dark fw-500">2-4 Guests</p>
+                                    <p class="ml30 text-dark fw-500">2-3 Guests</p>
                                 </div>
 
                                 <div class="relative me-4">
                                     <img src="images/icons/size.png" class="w-20px abs mt-1" alt="">
-                                    <p class="ml30 text-dark fw-500">35 Feets Size</p>
+                                    <p class="ml30 text-dark fw-500">350 Sqft Size</p>
                                 </div>
 
                                 <div class="relative me-4">
@@ -335,12 +338,12 @@
                                     </div>
                                 </div>
 
-                                <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
+                                <!-- <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
                                         <img src="images/icons/safebox.png" class="w-30px" alt="">
                                         <p class="absolute abs-middle ml50 text-dark fw-500">Safebox</p>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
@@ -349,38 +352,26 @@
                                     </div>
                                 </div>
 
-                                <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
-                                    <div class="p-3 relative">
-                                        <img src="images/icons/desk.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">Work Desk</p>
-                                    </div>
-                                </div>
 
-                                <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
-                                    <div class="p-3 relative">
-                                        <img src="images/icons/refrigerator.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">Refrigerator</p>
-                                    </div>
-                                </div>
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
                                         <img src="images/icons/balcony.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">Balcony</p>
+                                        <p class="absolute abs-middle ml50 text-dark fw-500">Veranda</p>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
                                         <img src="images/icons/bathub.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">Bathub</p>
+                                        <p class="absolute abs-middle ml50 text-dark fw-500">Hot Water geyser</p>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
                                         <img src="images/icons/city.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">City View</p>
+                                        <p class="absolute abs-middle ml50 text-dark fw-500">Forest View</p>
                                     </div>
                                 </div>
                             </div>
