--- a/timber-haven.html
+++ b/timber-haven.html
@@ -306,7 +306,7 @@
 
                                 <div class="relative me-4">
                                     <img src="images/icons/size.png" class="w-20px abs mt-1" alt="">
-                                    <p class="ml30 text-dark fw-500">35 Feets Size</p>
+                                    <p class="ml30 text-dark fw-500">400 Sqft Size</p>
                                 </div>
 
                                 <div class="relative me-4">
@@ -316,7 +316,7 @@
 
                                 <div class="relative me-4">
                                     <img src="images/icons/bed.png" class="w-20px abs mt-1" alt="">
-                                    <p class="ml30 text-dark fw-500">1 King Bed</p>
+                                    <p class="ml30 text-dark fw-500">1 King Bed ,1 Double Bed</p>
                                 </div>
                             </div>
 
@@ -340,12 +340,12 @@
                                     </div>
                                 </div>
 
-                                <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
+                                <!-- <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
                                         <img src="images/icons/safebox.png" class="w-30px" alt="">
                                         <p class="absolute abs-middle ml50 text-dark fw-500">Safebox</p>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
@@ -356,17 +356,12 @@
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
-                                        <img src="images/icons/desk.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">Work Desk</p>
+                                        <img src="images/icons/bathub.png" class="w-30px" alt="">
+                                        <p class="absolute abs-middle ml50 text-dark fw-500">Hot Water geyser</p>
                                     </div>
                                 </div>
 
-                                <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
-                                    <div class="p-3 relative">
-                                        <img src="images/icons/refrigerator.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">Refrigerator</p>
-                                    </div>
-                                </div>
+                                
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
@@ -375,17 +370,12 @@
                                     </div>
                                 </div>
 
-                                <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
-                                    <div class="p-3 relative">
-                                        <img src="images/icons/bathub.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">Bathub</p>
-                                    </div>
-                                </div>
+                                
 
                                 <div class="col-lg-4 col-6 fadeInRight" data-wow-delay=".2s">
                                     <div class="p-3 relative">
                                         <img src="images/icons/city.png" class="w-30px" alt="">
-                                        <p class="absolute abs-middle ml50 text-dark fw-500">City View</p>
+                                        <p class="absolute abs-middle ml50 text-dark fw-500">Forest View</p>
                                     </div>
                                 </div>
                             </div>
