updated room type spec

--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6 text-center">
-                                                        <p class="slider-teaser mb-0">Discover the perfect blend of nature, and adventure at Tiger Woods. Nestled in the heart of mountain, your gateway to an unforgettable experience.</p>
-                                                        <a class="btn-main mt-3" href="rooms.html">Discover Rooms</a>
+                                                        <p class="slider-teaser mb-0">Step into the wild and let nature’s magic captivate your soul at Pilibhit Tigerwoods Resort</p>
+                                                        <a class="btn-main mt-3" href="reservation.html">Book Rooms</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -348,8 +348,8 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6 text-center">
-                                                        <p class="slider-teaser mb-0">Discover the perfect blend of nature, and adventure at Tiger Woods. Nestled in the heart of Pilibhit Tiger Reserve, your gateway to an unforgettable experience.</p>
-                                                        <a class="btn-main mt-3" href="rooms.html">Discover Rooms</a>
+                                                        <p class="slider-teaser mb-0">"A hidden paradise in the heart of the wild – adventure, serenity, and luxury await you!</p>
+                                                        <a class="btn-main mt-3" href="reservation.html">Book Rooms</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -434,7 +434,7 @@
                                             <h4 class="mb-0 hover-scale-in-3">View</h4>
                                         </div> 
                                         <div class="absolute w-100 h-100 top-0 bg-dark hover-op-05"></div>
-                                        <img src="images-mountain-hotel/features/room7.jpg" class="img-fluid" alt="Canopy Preview">
+                                        <img src="images-mountain-hotel/features/property1.jpg" class="img-fluid" alt="Canopy Preview">
                                     </div>
                                 </div>
                                 <h4>Nearby Attractions</h4>
@@ -773,12 +773,12 @@
                             </div>
                             <div>
                                 <img src="images/logo-image-trnspt.png" class="w-200px" alt=""><br>
-                                <div class="social-icons mb-sm-30 mt-4">
+                                <!--  <div class="social-icons mb-sm-30 mt-4">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                                </div>
+                                </div> --> 
 
                             </div>
                             <div>
