--- a/room-single.html
+++ b/room-single.html
@@ -585,12 +585,12 @@
                             </div>
                             <div>
                                 <img src="images/logo-white.webp" class="w-200px" alt=""><br>
-                                <div class="social-icons mb-sm-30 mt-4">
+                                <!-- <div class="social-icons mb-sm-30 mt-4">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                                </div>
+                                </div> -->
 
                             </div>
                             <div>
