--- a/timber-haven.html
+++ b/timber-haven.html
@@ -564,8 +564,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            Copyright 2024 - https://ak2019cs.gitbook.io/aditya-kumar
-                        </div>
+    Copyright <a href="https://ak2019cs.gitbook.io/aditya-kumar" target="_blank">MaDgEnIuS_ADI</a>
+</div>
+
                     </div>
                 </div>
             </div>
