updated room type spec

--- a/contact.html
+++ b/contact.html
@@ -378,9 +378,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-    Copyright <a href="https://ak2019cs.gitbook.io/aditya-kumar" target="_blank">MaDgEnIuS_ADI</a>
-</div>
-
+                            Copyright 2024 - https://ak2019cs.gitbook.io/aditya-kumar
+                        </div>
                     </div>
                 </div>
             </div>
