updated room type spec

--- a/index.html
+++ b/index.html
@@ -564,10 +564,38 @@
                                 <div id="canopyCarousel" class="carousel slide">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="images-mountain-hotel/features/3.webp" class="d-block w-100" alt="Canopy Walk">
+                                            <img src="https://cdn.s3waas.gov.in/s30aa1883c6411f7873cb83dacb17b0afc/uploads/bfi_thumb/2018022432-olw6kfvttd1s8m5pgl3wc6qwjp6xkdbxkuea1zux28.jpg" class="d-block w-100" alt="Canopy Walk">
                                             <div class="carousel-caption">
-                                                <h5>Treetop Exploration</h5>
-                                                <p>Experience the jungle from a unique perspective on our elevated canopy walkway</p>
+                                                <h5>Gauri Shankar Temple</h5>
+                                                <p>This temple is 250 years old. This is situated in Mohalla KHAKRA at banks of rivers DEVHA & KHAKRA. It is said that the fore fathers of PUJARI Pandit Har Prasad came to this place with other saints. There was a jungle at that time. He dreamt in the night that Bhagwan Shankar is here, in the morning he saw the moorti of SHANKAR BHAGWAN. Gradually a temple was built.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://cdn.s3waas.gov.in/s30aa1883c6411f7873cb83dacb17b0afc/uploads/bfi_thumb/2018022293-olw6key7lc8yzr6p8ly838thwz6mh3prexmr6iqbgq.jpg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Chhathavi Padshahi Gurudwara</h5>
+                                                <p>This is a 400-year-old gurudwara in the Pakrdiya locality of the city. It is said that Guru Govind Singhji took rest here on the way to Nanakmatta. He established a gurudwara here on the name of the 6th guru Sri Har Govind ji and named it Chattvi Padshahi Gurudwara. In 1983, one of the famous social servants in area Sri Baba Faoj Singh reconstructed this beautiful shrine.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/h3.jpeg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Chuka Beach</h5>
+                                                <p>It is situated between Sharda dam and canal. It is a beautiful tourist destination with one bamboo hut, one tree house and four Thara huts. Best time to visit Chuka beach is between the month of October and April.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/river1.jpeg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Siphon Canal Point</h5>
+                                                <p>This is a system of two canals flowing one above the other. Lower most is the kharja canal which originates from Sharda sagar dam and upper one is Khiri branch originating from Bifurcation point.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/pilibhit10.jpeg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Sunset Point</h5>
+                                                <p>Sunset will be useful not only for people who like to gaze at the starlight sky, but also photographers, who can catch the most picturesque frame at the junction of night.</p>
                                             </div>
                                         </div>
                                     </div>
