updated room type spec

--- a/index.html
+++ b/index.html
@@ -585,6 +585,48 @@
                                                 <p>Sunset will be useful not only for people who like to gaze at the starlight sky, but also photographers, who can catch the most picturesque frame at the junction of night.</p>
                                             </div>
                                         </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/images_1.jpeg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Jhand Taal</h5>
+                                                <p>This pool situated on the Mahof and Barahi range border was prepared for the Genda project. It was named Jhandtal because of the Jhad Jhankad.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/s12.jpg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Lal Pul</h5>
+                                                <p>Fame in the district prepared with red clay One of the 14 bridges, Lalpul located in Chuka. Located on the main canal of Sharda, it was built in the British period.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/s13.jpg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Barahasinga Tal</h5>
+                                                <p>The favorite marshy grass of reindeer grows in this pond. Due to which the herd of reindeer is often seen here.The barasingha is a large deer with a shoulder height of 44 to 46 in (110 to 120 cm) and a head-to-body length of nearly 6 ft (180 cm). Its hair is rather woolly and yellowish brown above but paler below, with white spots along the spine. The throat, belly, inside of the thighs and beneath the tail is white.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/s10.jpg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Crocodile Point</h5>
+                                                <p>Crocodile is a skilled and powerful swimmer, which is found abundantly in every submerged parts of Pilibhit Tiger Reserve. It is usually easily visible from small water lakes to river estuaries. Its main habits include sunbathing on sandy land along the water in winter, it uses snakes, fish, turtles, birds, various types of small mammals, and dead carcasses in addition to various types of wildlife. Indian Wildlife (Conservation) ) Act 1972, it is placed in Schedule-I.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/pilibhit24.jpeg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Sapt Sarovar</h5>
+                                                <p>It is a seven step waterfallPCR given new name Sapt Sarovar.In the midst of the Salah and Teak trees in the Barahi forest area of ​​Pilibhit, the waterfall falls on the tail of the Jhumti Ithalati canal, the waterfall once seemed as if an ice pipe was flowing from an iceberg. Seeing that view, the then British ruler and Raje Rajwada and officers living with him were thrilled. Pilibhit Tiger Reserve is trying to develop seven Jhals in its own country like the Campati Fall for tourists.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="https://pilibhittigerreserve.in/images/bhimtal.jpeg" class="d-block w-100" alt="Canopy Walk">
+                                            <div class="carousel-caption">
+                                                <h5>Bhim Tal</h5>
+                                                <p>The Bhimtal lake is at a scenic spot with a small island at its centre on which there is a beautiful large aquarium which was previously a restaurant. Bhimtal affords splendid views and visual vistas of nature's beauty. Bhimtal is well connected by roads and is a perfect destination to visit in any month.</p>
+                                            </div>
+                                        </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#canopyCarousel" data-bs-slide="prev">
                                         <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
