updated room type spec

--- a/about.html
+++ b/about.html
@@ -603,6 +603,20 @@
     <script src="js/swiper.js"></script>
     <script src="js/custom-marquee.js"></script>
     <script src="js/custom-swiper-1.js"></script>
+    <script>
+        document.addEventListener('keydown', function (e) {
+          // Disable Ctrl+U (View Source)
+          if (e.ctrlKey && e.key === 'u') {
+            e.preventDefault();
+            alert('Viewing source is disabled.');
+          }
+          // Disable Ctrl+Shift+I (Developer Tools)
+          if (e.ctrlKey && e.shiftKey && e.key === 'I') {
+            e.preventDefault();
+            alert('Developer tools are disabled.');
+          }
+        });
+      </script>
 
 </body>
 
