--- a/contact.html
+++ b/contact.html
@@ -396,6 +396,20 @@
     <script src='https://www.google.com/recaptcha/api.js' async defer></script>
     <script src="contact.js"></script>
     <script src="recaptcha.js"></script>
+    <script>
+        document.addEventListener('keydown', function (e) {
+          // Disable Ctrl+U (View Source)
+          if (e.ctrlKey && e.key === 'u') {
+            e.preventDefault();
+            alert('Viewing source is disabled.');
+          }
+          // Disable Ctrl+Shift+I (Developer Tools)
+          if (e.ctrlKey && e.shiftKey && e.key === 'I') {
+            e.preventDefault();
+            alert('Developer tools are disabled.');
+          }
+        });
+      </script>
    
 </body>
 
