--- a/index.html
+++ b/index.html
@@ -870,7 +870,22 @@
     <script src="js/custom-marquee.js"></script>
     <script src="js/custom-swiper-2.js"></script>
     <!-- Bootstrap JS -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('keydown', function (e) {
+          // Disable Ctrl+U (View Source)
+          if (e.ctrlKey && e.key === 'u') {
+            e.preventDefault();
+            alert('Viewing source is disabled.');
+          }
+          // Disable Ctrl+Shift+I (Developer Tools)
+          if (e.ctrlKey && e.shiftKey && e.key === 'I') {
+            e.preventDefault();
+            alert('Developer tools are disabled.');
+          }
+        });
+      </script>
 
 </body>
 
