--- a/reservation.html
+++ b/reservation.html
@@ -498,6 +498,20 @@
     <script src="js/designesia.js"></script>
     <script src='https://www.google.com/recaptcha/api.js' async defer></script>
     <script src="form.js"></script>
+    <script>
+        document.addEventListener('keydown', function (e) {
+          // Disable Ctrl+U (View Source)
+          if (e.ctrlKey && e.key === 'u') {
+            e.preventDefault();
+            alert('Viewing source is disabled.');
+          }
+          // Disable Ctrl+Shift+I (Developer Tools)
+          if (e.ctrlKey && e.shiftKey && e.key === 'I') {
+            e.preventDefault();
+            alert('Developer tools are disabled.');
+          }
+        });
+      </script>
 
 </body>
 
