updated room type spec

--- a/contact.html
+++ b/contact.html
@@ -321,7 +321,7 @@
                                     
                                 
                                 <div class="text-center">
-                                    <div class="g-recaptcha d-inline-block " data-sitekey="copy-your-sitekey-here"></div>
+                                    <!-- <div class="g-recaptcha d-inline-block " data-sitekey="copy-your-sitekey-here"></div> -->
 
                                     <div id='submit' class="mt20 text-cen">
                                         <input type='submit' id='send_message' value='Send Message' class="btn-main">
