updated room type spec

--- a/timber-haven.html
+++ b/timber-haven.html
@@ -275,55 +275,49 @@
 
             <!-- Include Fancybox CSS & JS -->
             <!-- Include Fancybox CSS & JS -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/4.0.31/fancybox.min.css" />
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/4.0.31/fancybox.umd.min.js"></script>
+<!-- Include Fancybox CSS & JS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/4.0.31/fancybox.min.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/4.0.31/fancybox.umd.min.js"></script>
 
-            <section class="pt80 sm-pt-40 no-bottom">
-                <div class="owl-custom-nav menu-float" data-target="#gallery-carousel">
-                    <a class="btn-next"></a>
-                    <a class="btn-prev"></a>                                
+        <section class="pt80 sm-pt-40 no-bottom">
+            <div class="owl-custom-nav menu-float" data-target="#gallery-carousel">
+                <a class="btn-next"></a>
+                <a class="btn-prev"></a>                                
 
-                    <div id="gallery-carousel" class="owl-3-cols-autowidth owl-carousel owl-theme">
-                        <a href="images/room-single/timber1.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/timber1.jpg" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/timber-2.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/timber-2.jpg" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/timber3.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/timber3.jpg" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/timber4.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/timber4.jpg" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/5.webp" data-fancybox="gallery">
-                            <img src="images/room-single/5.webp" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/timber6.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/timber6.jpg" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/timber7.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/timber7.jpg" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/room6.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/room6.jpg" class="h-600px" alt="">
-                        </a>
-                        <a href="images/room-single/timber5.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/timber5.jpg" class="h-600px" alt="">
-                        </a>
-                    </div>
+                <div id="gallery-carousel" class="owl-3-cols-autowidth owl-carousel owl-theme">
+                    <a href="images/room-single/timber1.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/timber1.jpg" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/timber-2.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/timber-2.jpg" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/timber3.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/timber3.jpg" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/timber4.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/timber4.jpg" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/5.webp" data-fancybox="gallery">
+                        <img src="images/room-single/5.webp" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/timber6.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/timber6.jpg" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/timber7.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/timber7.jpg" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/room6.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/room6.jpg" class="h-600px" alt="">
+                    </a>
+                    <a href="images/room-single/timber5.jpg" data-fancybox="gallery">
+                        <img src="images/room-single/timber5.jpg" class="h-600px" alt="">
+                    </a>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <script>
-                Fancybox.bind("[data-fancybox='gallery']", {
-                    Toolbar: true,         // Show toolbar with navigation arrows
-                    closeButton: "top",     // Close button position
-                    wheel: "slide",         // Enable mouse wheel navigation
-                    dragToClose: true,      // Allow dragging to close
-                    infinite: true          // Enable looping through images
-                });
-            </script>
+<!-- No extra JS needed! Fancybox auto-initializes -->
+
 
 
 
