--- a/alpine-retreat.html
+++ b/alpine-retreat.html
@@ -274,6 +274,7 @@
 
             <!-- Include Fancybox CSS & JS -->
             <!-- Include Fancybox CSS & JS -->
+            <!-- Fancybox CSS & JS -->
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/4.0.31/fancybox.min.css" />
             <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/4.0.31/fancybox.umd.min.js"></script>
 
@@ -283,29 +284,32 @@
                     <a class="btn-prev"></a>                                
 
                     <div id="gallery-carousel" class="owl-3-cols-autowidth owl-carousel owl-theme">
-                        <a href="images/room-single/alpine-retreat.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/alpine-retreat.jpg" class="h-600px" alt="">
+                        <a href="images/room-single/timber1.jpg" data-fancybox="gallery">
+                            <img src="images/room-single/timber1.jpg" class="h-600px" alt="">
                         </a>
-                        <a href="images/room-single/alpine1.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/alpine1.jpg" class="h-600px" alt="">
+                        <a href="images/room-single/timber-2.jpg" data-fancybox="gallery">
+                            <img src="images/room-single/timber-2.jpg" class="h-600px" alt="">
                         </a>
-                        <a href="images/room-single/alpine2.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/alpine2.jpg" class="h-600px" alt="">
+                        <a href="images/room-single/timber3.jpg" data-fancybox="gallery">
+                            <img src="images/room-single/timber3.jpg" class="h-600px" alt="">
                         </a>
-                        <a href="images/room-single/alpine5.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/alpine5.jpg" class="h-600px" alt="">
+                        <a href="images/room-single/timber4.jpg" data-fancybox="gallery">
+                            <img src="images/room-single/timber4.jpg" class="h-600px" alt="">
                         </a>
-                        <a href="images/room-single/room7.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/room7.jpg" class="h-600px" alt="">
+                        <a href="images/room-single/5.webp" data-fancybox="gallery">
+                            <img src="images/room-single/5.webp" class="h-600px" alt="">
                         </a>
-                        <a href="images/room-single/alpine4.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/alpine4.jpg" class="h-600px" alt="">
+                        <a href="images/room-single/timber6.jpg" data-fancybox="gallery">
+                            <img src="images/room-single/timber6.jpg" class="h-600px" alt="">
                         </a>
-                        <a href="images/room-single/alpine3.jpg" data-fancybox="gallery">
-                            <img src="images/room-single/alpine3.jpg" class="h-600px" alt="">
+                        <a href="images/room-single/timber7.jpg" data-fancybox="gallery">
+                            <img src="images/room-single/timber7.jpg" class="h-600px" alt="">
                         </a>
                         <a href="images/room-single/room6.jpg" data-fancybox="gallery">
                             <img src="images/room-single/room6.jpg" class="h-600px" alt="">
+                        </a>
+                        <a href="images/room-single/timber5.jpg" data-fancybox="gallery">
+                            <img src="images/room-single/timber5.jpg" class="h-600px" alt="">
                         </a>
                     </div>
                 </div>
@@ -320,6 +324,7 @@
                     infinite: true          // Enable looping through images
                 });
             </script>
+
 
 
 
